# podcast-helper

./: .gitignore  CHANGELOG.md  Dockerfile  EXAMPLES.md  GUI.md  LANDSCAPE.md  LISEZMOI.md  PAYSAGE.md  README.md  TRIGGERS.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
assets/: landscape.csv  paysage.csv
podcast_helper/: __init__.py  api.py  cli_argparse.py  cli_click.py  feed.py  gui.py  mcp.py  streaming.py
skills/: README.md
skills/podcast-helper/: SKILL.md
skills/podcast-helper/references/: cli-reference.md  surfaces.md  triggers.md
tests/: __init__.py  test_api.py  test_cli.py  test_feed.py  test_mcp.py  test_streaming.py  test_v02_features.py
