[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-helper"
version = "0.1.0"
description = "Podcast Helper — universal audio stream consumer. URL-in → PCM-out for local files, direct audio URLs, RSS feed enclosures, and yt-dlp-supported sources (YouTube, Vimeo, Twitch, SoundCloud, …). Built on yt-helper + ffmpeg + feedparser + podcastparser; Shannon-correct resampling, mono downmix or native channels preserved."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "MIT"}
authors = [
    {name = "Warith HARCHAOUI", email = "warithmetics@deraison.ai"},
]
keywords = ["podcast", "audio", "streaming", "pcm", "yt-dlp", "rss", "feedparser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "yt-helper @ git+https://github.com/warith-harchaoui/yt-helper.git@v1.1.0",
    "feedparser>=6.0,<7",
    "podcastparser>=0.6,<1",
    "requests>=2.28,<3",
    "numpy>=1.24",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[project.urls]
Homepage = "https://github.com/warith-harchaoui/podcast-helper"

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the network (RSS feeds, yt-dlp, ffmpeg streams). Slow and fragile; skipped by default.",
]
addopts = "-m 'not integration'"
