[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "podcast-helper"
version = "0.3.5"
description = "Podcast Helper — universal audio stream consumer exposed as library, argparse CLI, click CLI, FastAPI HTTP surface and MCP tools. URL-in → PCM-out for local files, direct audio URLs, RSS feed enclosures, and yt-dlp-supported sources (YouTube, Vimeo, Twitch, SoundCloud, …). Built on youtube-helper + ffmpeg + feedparser + podcastparser; Shannon-correct resampling, mono downmix or native channels preserved."
readme = "README.md"
requires-python = ">=3.10,<3.14"
license = {text = "BSD-3-Clause"}
authors = [
    {name = "Warith HARCHAOUI", email = "warithmetics@deraison.ai"},
]
keywords = ["podcast", "audio", "streaming", "pcm", "yt-dlp", "youtube", "rss", "feedparser"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "youtube-helper>=1.3.4",
    "os-helper>=1.5.0",
    "feedparser>=6.0,<7",
    "podcastparser>=0.6,<1",
    "requests>=2.28,<3",
    "numpy>=1.24",
]

[project.optional-dependencies]
# CLI-only-with-click extra. argparse variant needs no runtime dep and
# is always available.
cli = ["click>=8.1,<9"]
# FastAPI HTTP surface (podcast_helper.api). uvicorn + python-multipart
# so multipart form data works out of the box.
api = [
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.9,<1",
]
# MCP surface (podcast_helper.mcp). Depends on the `api` extra
# — fastapi-mcp wraps the FastAPI app.
mcp = [
    "fastapi-mcp>=0.3,<1",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "python-multipart>=0.0.9,<1",
]
# `dev` keeps the bar low for CI — pytest + pytest-asyncio + httpx (for
# FastAPI TestClient) + click (so the click CLI import always resolves
# in tests) + fastapi + fastapi-mcp so smoke tests can import every
# surface without requiring the caller to install all extras.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "click>=8.1,<9",
    "fastapi>=0.111,<1",
    "python-multipart>=0.0.9,<1",
    "fastapi-mcp>=0.3,<1",
]

[project.scripts]
# argparse-based CLI — no runtime dep beyond stdlib + core package.
podcast-helper = "podcast_helper.cli_argparse:main"
# click-based twin — install with the [cli] extra.
podcast-helper-click = "podcast_helper.cli_click:cli"
# MCP server (over FastAPI) — install with the [api,mcp] extras.
podcast-helper-mcp = "podcast_helper.mcp:main"

[project.urls]
Homepage = "https://github.com/warith-harchaoui/podcast-helper"
Issues = "https://github.com/warith-harchaoui/podcast-helper/issues"

[tool.setuptools.packages.find]
include = ["podcast_helper*"]
exclude = ["tests*", "assets*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "integration: tests that hit the network (RSS feeds, yt-dlp, ffmpeg streams). Slow and fragile; skipped by default.",
]
addopts = "-m 'not integration'"

[tool.ruff]
line-length = 100
target-version = "py310"
extend-exclude = ["assets", "tests"]

[tool.ruff.lint]
# Conservative starter set: pyflakes (F), pycodestyle errors (E), warnings (W),
# isort (I), bugbear (B), comprehensions (C4), pyupgrade (UP), simplify (SIM).
# Easy to tighten later; this is the baseline.
select = ["E", "F", "W", "I", "B", "C4", "UP", "SIM"]
ignore = [
    "E501",  # line-too-long — handled by formatter / context-dependent
    "B008",  # function call in argument default — too noisy for our style
    "SIM108",  # ternary preferred over if/else — sometimes hurts readability
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]  # assert False in pytest is fine
